--- a/builder.service
+++ b/builder.service
@@ -6,10 +6,7 @@ After=network.target
 NotifyAccess=all
 Type=simple
 EnvironmentFile=/etc/sysconfig/builder-environment.conf
-ExecStart=/usr/bin/builder \
-		BUILD_ARCH=$BUILD_ARCH \
-		BUILD_TOKEN=$BUILD_TOKEN \
-		BUILD_PLATFORM=$BUILD_PLATFORM
+ExecStart=/usr/bin/builder
 
 ExecReload=/bin/kill -s HUP $MAINPID
 TimeoutStartSec=0
