--- a/builder-environment.conf
+++ b/builder-environment.conf
@@ -1,4 +1,4 @@
 OPTIONS=""
 BUILD_TOKEN="your_token"
-BUILD_ARCH="x86_64 armv7hnl znver1 i686 aarch64"
+BUILD_ARCH="x86_64 armv7hnl znver1 i686 aarch64 riscv64"
 BUILD_PLATFORM="cooker"
