--- a/builder.conf
+++ b/builder.conf
@@ -1,4 +1,4 @@
-{
+application:{
   abf:{
     api_url = "https://abf.openmandriva.org/api/v1";
     file_store_url = "https://file-store.openmandriva.org/api/v1/upload";
