--- a/builder.service
+++ b/builder.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=OpenMandriva builder application for abf.openmandriva.org
-Wants=local-fs.target
-After=network.target local-fs.target
+Wants=local-fs.target network-online.target
+After=network-online.target local-fs.target sys-subsystem-net-devices-%i.device
+PartOf=sys-subsystem-net-devices-%i.device
 
 [Service]
 NotifyAccess=all
