do not bloat journal with build logs

--- a/builder.service
+++ b/builder.service
@@ -12,6 +12,7 @@ ExecStart=/usr/bin/builder
 ExecReload=/bin/kill -s HUP $MAINPID
 TimeoutStartSec=0
 Restart=on-abnormal
+StandardOutput=null
 
 [Install]
 WantedBy=multi-user.target
